--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 	<classpathentry kind="con" path="at.bestsolution.efxclipse.tooling.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs"/>
-	<classpathentry kind="lib" path="libs/jars/alljoyn.jar"/>
 	<classpathentry kind="lib" path="res"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/alljoyn_java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
