Update Java classes and maintanence data
Update to View manager to include into project.
Updated Java files to use java.util.logging
.gitignore ignores .class files
.gitignore ignores all .h files
gitignore ignores scons produced files
Refactored the structure of native libraries
Added Scons build enviroment things
Added jfxrt.jar as a third party jar so that e(fx)clipse is not always needed
Added a Simpleargument factory showing plain jane labels

--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="org/alljoyn/triumph/util/AJParser.java|org/alljoyn/triumph/view/argview/AttributeListCell.java|org/alljoyn/triumph/view/ArgumentControl.java|org/alljoyn/triumph/controller/ServiceController.java|org/alljoyn/triumph/view/ServicesView.java|org/alljoyn/triumph/view/ViewManager.java|org/alljoyn/triumph/view/argview/SimpleControl.java" kind="src" path="src"/>
+	<classpathentry excluding="org/alljoyn/triumph/util/AJParser.java|org/alljoyn/triumph/view/argview/AttributeListCell.java|org/alljoyn/triumph/view/ArgumentControl.java|org/alljoyn/triumph/controller/ServiceController.java|org/alljoyn/triumph/view/ServicesView.java|org/alljoyn/triumph/view/argview/SimpleControl.java" kind="src" path="src"/>
 	<classpathentry excluding="org/alljoyn/triumph/test/MarshallingTest.java" kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_25"/>
-	<classpathentry kind="con" path="at.bestsolution.efxclipse.tooling.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="libs"/>
 	<classpathentry kind="lib" path="res"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alljoyn_java"/>
+	<classpathentry kind="lib" path="libs/jars/jfxrt.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
