--- a/Sconstruct
+++ b/Sconstruct
@@ -18,7 +18,7 @@ import os
 import sys
 from ConfigureJNI import ConfigureJNI
 
-if sys.platform == 'win32':
+if sys.platform == 'cygwin':
 	# Handle microsoft visual studios
 	env = Enviroment()
 else:
