--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/jars/jfxrt.jar"/>
 	<classpathentry kind="lib" path="libs"/>
+	<classpathentry kind="lib" path="libs/jars/jfxtras-labs-2.2-r4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
