--- a/.classpath
+++ b/.classpath
@@ -5,13 +5,9 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_25"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="res"/>
-	<classpathentry kind="lib" path="libs/jars/alljoyn.jar">
-		<attributes>
-			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="Triumph/libs/lib/linux"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="lib" path="libs/jars/jfxrt.jar"/>
 	<classpathentry kind="lib" path="libs"/>
 	<classpathentry kind="lib" path="libs/jars/jfxtras-labs-2.2-r4.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/alljoyn_java"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
