--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 	<classpathentry kind="lib" path="libs"/>
 	<classpathentry kind="lib" path="libs/jars/jfxtras-labs-2.2-r4.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/alljoyn_java"/>
+	<classpathentry kind="lib" path="libs/jars/alljoyn_about.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
